# RTC

./: CMakeLists.txt  README.md  RTC_API.c  RTC_TFPT1206L1002FM.h
doc/: Doxyfile
doc/reference/html/: _r_t_c___a_p_i_8c.html  _r_t_c___a_p_i_8c_source.html  _r_t_c___a_p_i_8h.html  _r_t_c___a_p_i_8h_source.html  _r_t_c___t_f_p_t1206_l1002_f_m_8h.html  _r_t_c___t_f_p_t1206_l1002_f_m_8h_source.html  annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  index.html  platform__types_8h.html  platform__types_8h_source.html  struct_t_f_p_t___vishay.html
doc/reference/html/search/: all_0.js  all_2.js  all_4.js  classes_0.js  defines_0.js  files_0.js  searchdata.js  typedefs_0.js  variables_1.js
doc/reference/latex/: _r_t_c___a_p_i_8c.tex  _r_t_c___a_p_i_8c_source.tex  _r_t_c___a_p_i_8h.tex  _r_t_c___a_p_i_8h_source.tex  _r_t_c___t_f_p_t1206_l1002_f_m_8h.tex  _r_t_c___t_f_p_t1206_l1002_f_m_8h_source.tex  annotated.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  platform__types_8h.tex  platform__types_8h_source.tex  refman.tex  struct_t_f_p_t___vishay.tex
lib/inc/: RTC_API.h  platform_types.h
src/: RTC_API.c  RTC_TFPT1206L1002FM.h
support/: adc_values.txt  datasheet_values.txt
support/report/: report.aux  report.tex
test/: CMakeLists.txt
test/src/: RTC_TFPT1206L1002FM_ADC.c  RTC_TFPT1206L1002FM_ADC.h  terminal_RTC_API.c  test_RTC_API.c  unittest_framework.c  unittest_framework.h  unittests.c  unittests.h
